install zip unzip

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -17,6 +17,8 @@ ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
 RUN wget --no-verbose -O /tmp/apache-maven-3.2.2.tar.gz http://archive.apache.org/dist/maven/maven-3/3.2.2/binaries/apache-maven-3.2.2-bin.tar.gz; \
   echo "87e5cc81bc4ab9b83986b3e77e6b3095 /tmp/apache-maven-3.2.2.tar.gz" | md5sum -c
 
+RUN apt-get update && apt-get install -y zip unzip
+
 # install maven
 RUN tar xzf /tmp/apache-maven-3.2.2.tar.gz -C /opt/; \
   ln -s /opt/apache-maven-3.2.2 /opt/maven; \
